[raz-new] Fist steps to run on GWT 2.11. Compileable but server does not start