@@ -13,6 +13,7 @@
 
     <artifactId>razarion-client</artifactId>
     <name>Razarion Client</name>
+    <packaging>gwt-app</packaging>
 
     <properties>
         <!-- errai 4.0.0.Beta6 is not working -->
@@ -22,33 +23,39 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>org.jboss.errai.bom</groupId>
-                <artifactId>errai-bom</artifactId>
-                <version>${errai.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-            <!-- TODO remove if all moved to GWT version-->
-            <dependency>
-                <groupId>com.google.gwt</groupId>
+                <groupId>org.gwtproject</groupId>
                 <artifactId>gwt-dev</artifactId>
                 <version>${gwt.version}</version>
-                <scope>provided</scope>
             </dependency>
             <dependency>
-                <groupId>com.google.gwt</groupId>
+                <groupId>org.gwtproject</groupId>
                 <artifactId>gwt-user</artifactId>
                 <version>${gwt.version}</version>
-                <scope>provided</scope>
             </dependency>
-            <!-- TODO remove ENDS if all moved to GWT version-->
         </dependencies>
     </dependencyManagement>
 
     <dependencies>
+        <dependency>
+            <groupId>com.google.jsinterop</groupId>
+            <artifactId>jsinterop-annotations</artifactId>
+            <version>2.0.0</version>
+        </dependency>
         <!-- Razarion -->
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>razarion-share</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <!-- use for GWT compilation only -->
+            <groupId>${project.groupId}</groupId>
+            <artifactId>razarion-share</artifactId>
+            <version>${project.version}</version>
+            <classifier>sources</classifier>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>razarion-ui-service</artifactId>
             <version>${project.version}</version>
         </dependency>
@@ -57,20 +64,6 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>razarion-ui-service</artifactId>
             <version>${project.version}</version>
-            <scope>provided</scope>
-            <classifier>sources</classifier>
-        </dependency>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>razarion-share</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <!-- use for GWT compilation only -->
-            <groupId>${project.groupId}</groupId>
-            <artifactId>razarion-client-common</artifactId>
-            <version>${project.version}</version>
-            <scope>provided</scope>
             <classifier>sources</classifier>
         </dependency>
         <dependency>
@@ -81,21 +74,26 @@
         <dependency>
             <!-- use for GWT compilation only -->
             <groupId>${project.groupId}</groupId>
-            <artifactId>razarion-share</artifactId>
+            <artifactId>razarion-client-common</artifactId>
             <version>${project.version}</version>
-            <scope>provided</scope>
             <classifier>sources</classifier>
         </dependency>
         <!-- GWT -->
         <dependency>
-            <groupId>com.google.gwt</groupId>
+            <groupId>org.ow2.asm</groupId>
+            <artifactId>asm</artifactId>
+            <version>9.2</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.gwtproject</groupId>
             <artifactId>gwt-user</artifactId>
             <version>${gwt.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.google.gwt</groupId>
-            <artifactId>gwt-elemental</artifactId>
+            <groupId>org.gwtproject</groupId>
+            <artifactId>gwt-dev</artifactId>
             <version>${gwt.version}</version>
             <scope>provided</scope>
         </dependency>
@@ -113,50 +111,19 @@
         </dependency>
         <dependency>
             <groupId>com.google.elemental2</groupId>
-            <artifactId>elemental2-svg</artifactId>
-            <version>${gwt.elemental2.version}</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.google.elemental2</groupId>
-            <artifactId>elemental2-webgl</artifactId>
-            <version>${gwt.elemental2.version}</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.google.elemental2</groupId>
             <artifactId>elemental2-promise</artifactId>
             <version>${gwt.elemental2.version}</version>
             <scope>provided</scope>
         </dependency>
-        <!-- Errai -->
         <dependency>
-            <groupId>org.jboss.errai</groupId>
-            <artifactId>errai-ioc</artifactId>
+            <groupId>org.dominokit</groupId>
+            <artifactId>domino-rest-client</artifactId>
+            <version>1.0.2</version>
         </dependency>
         <dependency>
-            <groupId>org.jboss.errai</groupId>
-            <artifactId>errai-cdi-client</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.errai</groupId>
-            <artifactId>errai-jaxrs-client</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.errai</groupId>
-            <artifactId>errai-javax-enterprise</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.errai</groupId>
-            <artifactId>errai-ui</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.errai</groupId>
-            <artifactId>errai-data-binding</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.errai</groupId>
-            <artifactId>errai-marshalling</artifactId>
+            <groupId>com.google.dagger</groupId>
+            <artifactId>dagger-gwt</artifactId>
+            <version>2.45</version>
         </dependency>
         <!-- Test -->
         <dependency>
@@ -191,59 +158,19 @@
                                 <include>src/main/webapp/WEB-INF/deploy/</include>
                                 <include>src/main/webapp/WEB-INF/lib/</include>
                                 <include>**/gwt-unitCache/**</include>
-                                <include>.errai/</include>
                             </includes>
                         </fileset>
                     </filesets>
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
+                <groupId>net.ltgt.gwt.maven</groupId>
                 <artifactId>gwt-maven-plugin</artifactId>
-                <version>${gwt.pulgin.version}</version>
+                <extensions>true</extensions>
                 <configuration>
-                    <warSourceDirectory>${project.parent.basedir}${raz.web-dir}</warSourceDirectory>
-                    <logLevel>WARN</logLevel>
-                    <noServer>true</noServer>
-                    <extraJvmArgs>-Xmx4096m -XX:CompileThreshold=7000 -XX:MaxPermSize=512M </extraJvmArgs>
-                    <!--<extraJvmArgs>-Xmx2048m -XX:CompileThreshold=7000 -XX:MaxPermSize=512M -Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8000</extraJvmArgs>-->
-                    <runTarget>webgl.html</runTarget>
-                    <hostedWebapp>src/main/webapp</hostedWebapp>
-                    <strict>true</strict>
-                    <inplace>true</inplace>
-                    <generateJsInteropExports>true</generateJsInteropExports>
-                    <deploy>${project.parent.basedir}${raz.web-dir}debug</deploy>
-                    <!--<bindAddress>0.0.0.0</bindAddress>-->
-                    <!--<saveSource>true</saveSource>-->
-                    <!--<style>DETAILED</style>-->
-                    <!-- Only work with modified gwt-maven-plugin -->
-                    <!-- mvn gwt:run-codeserver -->
-                    <!-- Adds addition -src to the CodeServer -->
-                    <!-- Modified -->
-                    <!-- org.codehaus.mojo.gwt.shell.SuperDevModeMojo-->
-                    <!-- 1) Add new class attribute
-                         /**
-                           * A directory containing GWT source to be prepended to the classpath for compiling.
-                           * <p>
-                           * Can be set from command line using '-Dgwt.sources=...'
-                           */
-                           @Parameter(property = "gwt.sources")
-                           private String[] sources;
-
-                           2) set -src cmd arguments before calling CodeServer
-                           if(sources != null) {
-                               for (String source : sources) {
-                                   cmd.arg( "-src" ).arg(source);
-                                   System.out.println("add source: " + source);
-                               }
-                           }
-                           System.out.println(cmd);
-                           -->
-                    <sources>
-                        <source>${project.parent.basedir}/razarion-share/src/main/java</source>
-                        <source>${project.parent.basedir}/razarion-ui-service/src/main/java</source>
-                        <source>${project.parent.basedir}/razarion-client-common/src/main/java</source>
-                    </sources>
+                    <moduleName>com.btxtech.client.RazarionClient</moduleName>
+                    <moduleShortName>app</moduleShortName>
+                    <webappDirectory>${project.basedir}/../razarion-server/src/main/webapp</webappDirectory>
                 </configuration>
             </plugin>
         </plugins>
